--- a/user data/signup.html
+++ b/user data/signup.html
@@ -109,7 +109,7 @@
 			  success: function(res){
 			  	console.log(res);
 			  	var mail = res.data.email;
-			  	window.location.assign("http://localhost/shantanu/Music/user%20data/profile_data.html?email="+mail);
+			  	window.location.assign("profile_data.html?email="+mail);
 			  }
 			});
 		}	
