--- a/user data/signup.html
+++ b/user data/signup.html
@@ -68,7 +68,7 @@
 			<input type="email" name="email" placeholder="Email" id="email">
 			<span id="email_conf">Enter valid email</span>
 		    <input type="password" name="password" placeholder="Password" id="password">
-			<span id="pass_conf">password did not match the pattern</span>
+			<span id="pass_conf">password did not match the pattern, password must be 8 characters long</span>
 			<input type="password" name="confirm_password" placeholder="Confirm password" id="confirm_password" ><span id="confirm">passwords did not match</span>
 			<input type="submit" value="sign up" id="submit">		
 			</form>
